Changes
=======

1.2.0 (TBD)
-----------

- epsg_treats_as_latlong() and epsg_treats_as_northingeasting() functions have
  been added to rasterio.crs (#1943).

1.1.7 (2020-09-29)
------------------

- Add missing methods needed to determine whether GDAL treats a CRS as lat/long
  or northing/easting (#1943).
- Wrap calls to GDALChecksumImage so that errors set by GDAL are propagated to
  Python as a RasterioIOError.
- Raise RasterioDeprecationWarning when a dataset opened in modes other than
  'r' is given to the WarpedVRT constructor.
- Base RasterioDeprecationWarning on FutureWarning, following the
  recommendation of PEP 565.
- Fix a segmentation fault that occurs when a WarpedVRT closes after the
  dataset it references has been previously closed (#2001).
- Add resampling option to merge and rio-merge (#1996).

1.1.6 (2020-09-14)
------------------

- Remove background layer from boundless VRT (#1982). It's not needed since
  fixes in GDAL after 3.1.3. Wheels on PyPI for rasterio 1.1.6 will patch GDAL
  2.4.4 to fix those GDAL issues.
- Clean up VSI files left by MemoryFileBase, resolving #1953.
- Do not pass empty coordinate arrays to warp._transform to avoid crashes with
  some versions of GDAL as reported in #1952. Instead, directly return empty
  output arrays.
- Properly convert block size `--co` option values to int in rio-clip and
  rio-warp to prevent exceptions reported in #1989.
- Fail gracefully when rio-convert lacks an input file (#1985).
- Allow merge.merge() to open one dataset at a time (#1831).
- Optimize CRS.__eq__() for CRS described by EPSG codes.
- Fix bug in ParsedPath.is_remote() reported in #1967.
- The reproject() method accepts objects that provide `__array__` in addition
  to instances of numpy.ndarray (#1957, #1959).
- Custom labels may be used with show_hist() by giving the `label` keyword
  argument a sequence of label strings, one per band.

1.1.5 (2020-06-02)
------------------
